--- a/To-Do-List/src/Todo.css
+++ b/To-Do-List/src/Todo.css
@@ -1,47 +1,62 @@
-*{
-    text-align: center;
+body{
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 .container{
-    background-color: rgb(77, 134, 219);
-    font-size: 20px;
-    width: 400px;
-    margin-left: 100px;
-    position: absolute;
-    top: 10;
-    right: 600px;
-    border-radius: 20px;
-}
-input{
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    padding: 5px 20px;
-    border-radius: 5px;
-}
-button{
-    position: relative;
-    /* top: 3px; */
-    left: 50px;
-    padding: 5px 7px;
-    border-radius: 10px;
-    background-color: rgb(73, 209, 73);
+    width: 380px;
+    margin: auto;
+    padding: 11px;
+    background-color: rgb(1,112,112);
     color: white;
+    text-align: center;
+    margin-top: 44px;
+    border-radius: 15px;
 }
-.list{
+.taskInput{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
-}
-p{
-    font-size: 20px;
-    position: relative;
-    right: 90px;
-    color: white;
-}
-i{
-    font-size: 15px;
-    position: relative;
-    left: 150px;
 
 }
+.container input{
+    width: 70%;
+    padding: 9px;
+    border: none;
+    font-size: 22px;
+    border-radius: 10px;
+}
+.container button{
+    width: 70px;
+    height: 44px;
+    border: none;
+    background-color: rgb(74, 194, 38);
+    color: white;
+    font-size: 20px;
+    margin-left: 6px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.list{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 14px;
+
+}
+
+.list p{
+    font-size: 23px;
+    margin-left: 8px;
+}
+
+.list #deleteIcon{
+    position: relative;
+    left: -9%;
+    top: 28px;
+    cursor: pointer;
+    font-size: 21px;
+    color: black;
+    color: white;
+}
+
